# rt_preproc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  test  test.c
runtime_preproc/: __init__.py
src/rt_preproc/: __main__.py
src/rt_preproc/cli/: application.py  graphviz_cmd.py  patch_cmd.py  print_cmd.py
src/rt_preproc/console/: application.py  run_command.py
src/rt_preproc/parser/: __init__.py  ast.py  base.py  desugarer.py  parser.py  utils.py
src/rt_preproc/visitors/: base.py  graphviz.py  print.py  query.py  transform.py
src/rt_preproc/visitors/patch/: ast_ext.py  data.py  patch.py
src/runtime_preproc/: __main__.py
src/runtime_preproc/console/: application.py  run_command.py
src/runtime_preproc/parser/: __init__.py  desugarer.py
tests/: patch_test.py
tests/c/: foo.c  within_func.c  wraps_func.c
tests/c/declarations/: function_declaration.c  function_definition.c  research.txt  variable_declaration.c
tests/c/difftests/: diff_test.py
tests/c/difftests/macro_in_fn_no_vars/: conf.json  post.c
tests/c/difftests/macro_in_fn_vars/: orig.c  post.c
tests/c/foo/: foo.c  foo.patch.c
tests/c/nested/: three.c
tests/c/patchtests/: patch_test.py
tests/c/patchtests/macro_in_fn_no_vars/: conf.json  orig.c
tests/c/patchtests/macro_in_fn_vars/: conf.json  post.c
tests/c/patchtests/macro_in_fn_vars_nested/: orig.c  post.c
tests/c/patchtests/macro_sur_define_no_alt/: orig.c
tests/c/patchtests/macro_sur_fn_alt_dif_arg_types/: post.c
tests/c/patchtests/macro_sur_fn_alt_no_args/: post.c
tests/c/patchtests/macro_sur_fn_alt_no_args_assign/: orig.c
tests/c/patchtests/macro_sur_fn_no_alt/: orig.c  post.c
tests/c/patchtests/macro_sur_var_and_fn_alt_no_args_assign/: orig.c
tests/c/patchtests/macro_sur_var_dif_type/: orig.c
tests/c/patchtests/macro_sur_var_no_alt/: post.c
tests/c/patchtests/macro_sur_var_no_alt_expr/: orig.c
tests/c/patchtests/macro_sur_var_no_alt_expr_sur_usage/: conf.json  orig.c
tests/define/funcs/alt/: orig.c
tests/define/funcs/no_alt/: orig.c
tests/define/vars/alt/: orig.c
tests/define/vars/alt_dep/: orig.c
tests/enums/decl/: orig.c
tests/enums/decl_typedef/: orig.c
tests/enums/typedef/: orig.c
tests/funcs/alt_dif_arg_types/: orig.c
tests/funcs/no_args/: orig.c
tests/structs/decl/: orig.c
tests/structs/decl_typedef/: orig.c
tests/structs/ptr/: orig.c
tests/structs/typedef/: orig.c
tests/vars/global/dif_types/: orig.c  post.c
tests/vars/global/no_alt_expr/: orig.c
tests/vars/local/assign_fn_call/: post.c
tests/vars/local/decl/: orig.c
tests/vars/local/decl_nest/: conf.json
tests/vars/local/decl_twice/: orig.c
