[tool.poetry]
name = "rt_preproc"
version = "0.1.0"
description = ""
authors = ["Andrew Lee <candrewlee14@gmail.com>"]
readme = "README.md"
packages = [{include = "rt_preproc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.20.1"
cleo = "^2.0.1"
tree-sitter-types = "^0.0.2"
multimethod = "^1.9.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rt_preproc = "rt_preproc.console.application:main"
test = { callable = "rt_preproc:run_tests" }

[tool.poe.tasks]
setup = """
git submodule update --init --recursive
poetry install
pre-commit install
"""
gen_types = "python-tree-sitter-types vendor/tree-sitter-c/src/node-types.json src/rt_preproc/parser/ast.py"
