[tool.poetry]
name = "rt_preproc"
version = "0.1.0"
description = ""
authors = ["Andrew Lee <candrewlee14@gmail.com>"]
readme = "README.md"
packages = [{include = "rt_preproc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
tree-sitter = "^0.20.1"
cleo = "^2.0.1"
multimethod = "^1.9.1"
colorama = "^0.4.6"
astyle-py = "^1.0.5"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
tree-sitter-types = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rt_preproc = "rt_preproc.cli.application:main"
test = { callable = "rt_preproc:run_tests" }

[tool.poe.tasks]
gen_types = "python-tree-sitter-types vendor/tree-sitter-c/src/node-types.json src/rt_preproc/parser/ast.py"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[virtualenvs]
in-project = true